syntax = "proto3";

package docker.dto;

option php_namespace = "GRPC\\Docker";
option php_metadata_namespace = "GRPC\\Docker\\GPBMetadata";

message AddRequest {
    string repo = 1;
}

message AddResponse {
    bool status = 1;
}

message RemoveRequest {
    string repo = 1;
}

message RemoveResponse {
    bool status = 1;
}

message AllRequest {

}

message AllResponse {
    repeated string repos = 1;
}
