syntax = "proto3";

package docker;

option php_namespace = "GRPC\\Docker";
option php_metadata_namespace = "GRPC\\Docker\\GPBMetadata";

import "message.proto";

service DockerService {
    // Add a repository to collect metrics
    rpc Add (docker.dto.AddRequest) returns (docker.dto.AddResponse) {
    }

    // Remove an existing repository
    rpc Remove (docker.dto.RemoveRequest) returns (docker.dto.RemoveResponse) {
    }

    // Show all available repositories
    rpc All (docker.dto.AllRequest) returns (docker.dto.AllResponse) {
    }
}
